Remove test class warnings.